[package]
name = "costyrion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
bson = { version = "2.8.1", features = ["chrono-0_4"] }
chrono = "0.4.31"
http-body-util = "0.1.0"
mongodb = "2.8.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tower = "0.4.13"
