[package]
name = "costyrion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.1", features = ["trace", "add-extension"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
